<resources>
    <string name="app_name">SwimmingInstructorLocator</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="search_instructor">Search Instructor</string>
    <string name="instructor_name">Nguyễn Thị Ánh Viên</string>
    <string name="detail">Detail</string>
    <string name="search">Search</string>
    <string name="loading">Loading…</string>
    <string name="popular_course">Popular Course</string>
    <string name="see_all">See all ➜</string>
    <string name="course_name">Beginner Swim Class</string>
    <string name="course_instructor">John Doe</string>
    <string name="course_date">2023-10-30</string>
    <string name="course_locator">Location: Community Pool</string>
    <string name="course_description">Learn the basics of swimming.</string>
    <string name="top_instructors">Top Instructors</string>
    <string name="top_centers">Top Centers</string>
    <string name="center_name">Trung tâm dạy bơi kèm Đà Nẵng BP - Swimming Center</string>
    <string name="center_phone">(+84) 0935 468 419</string>
    <string name="center_address">962 Ngô Quyền - Sơn Trà</string>
    <string name="view_all_instructors">View All Instructors</string>
    <string name="instructor_email">anhvien@gmail.com</string>
    <string name="instructor_address">TP.Cần Thơ</string>
    <string name="view_all_centers">View All Centers</string>
    <string name="center_email">bpswimming@gmail.com</string>
    <string name="center_detail">Center Detail</string>
    <string name="center_image_desc">Center Image</string>
    <string name="world_swimming_center">World Swimming Center</string>
    <string name="rating">5 Star</string>
    <string name="center_description">The center is located in the heart of the city, with a large area, modern equipment, and a team of professional coaches.</string>
    <string name="number_of_students">1,000</string>
    <string name="swimmers">Swimmers</string>
    <string name="book_a_class">Book a class</string>
    <string name="our_instructors">Our Instructors</string>
    <string name="instructor_profile">Instructor\'s Profile</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="age_value">26</string>
    <string name="age">Age:</string>
    <string name="height_value">175 cm</string>
    <string name="weight_value">70 kg</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="background_information">Background Information</string>
    <string name="contact">Contact</string>
    <string name="since">Since:</string>
    <string name="instructor_phone">0909.222.555</string>
    <string name="since_value">Feb 2022</string>
    <string name="phone">Phone:</string>
    <string name="mail">Mail: </string>
    <string name="description">Description:</string>
    <string name="instructor_description">Nguyễn Thị Ánh Viên là cựu nữ vận động viên bơi lội thuộc Đoàn Thể thao Quân đội và Đội tuyển Bơi lội Quốc gia với quân hàm Trung tá quân đội nhân dân Việt Nam.</string>
    <string name="graduate">Graduate: </string>
    <string name="instructor_graduate">Trường ĐH TDTT TP.HCM</string>
    <string name="experience">Experience:</string>
    <string name="swimming_instructor_certification">Swimming Instructor Certification</string>
    <string name="no_center_founded">No Center Founded</string>
    <string name="no_course_founded">No Course Founded</string>
    <string name="no_instructor_founded">No Instructor Founded</string>
    <string name="next">Next</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="get_started">Get Started</string>
    <string name="slogan_1">Dive Into Confidence</string>
    <string name="slogan_content_1">Unlock your aquatic potential with the perfect swimming instructor. Dive into a world of self-assurance and mastery</string>
    <string name="slogan_2">Make Waves, Learn Splashes</string>
    <string name="slogan_content_2">From beginners to advanced, find skilled instructors to help you navigate the waters and make every splash count</string>
    <string name="slogan_3">Swim Smarter, Not Harder</string>
    <string name="slogan_content_3">Swim smarter, refine your technique, and enjoy the water like never before. Your aquatic adventure starts here</string>
    <string name="logo_description">10K+ success stories and counting</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="placeholder_username">john.doe</string>
    <string name="placeholder_pwd">********</string>
    <string name="placeholder_email">john.doe@gmail.com</string>
    <string name="required_marked">*</string>
    <string name="error_field_username">Username is required</string>
    <string name="error_field_email">Email is required</string>
    <string name="error_field_password">Password is required</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_link"><u>Sign In Here</u></string>
    <string name="sign_up_link"><u>Sign Up Here</u></string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account_yet">Don\'t have account yet?</string>
    <string name="already_have_an_account">Already have account?</string>
    <string name="save">Save</string>
    <string name="validate_username_blank">Username is required</string>
    <string name="validate_username_length">Username must be between 6 and 18 characters</string>
    <string name="validate_username_digit">The first character cannot be a numeric character</string>
    <string name="validate_email_blank">Email is required</string>
    <string name="validate_email_invalid">Email is not valid</string>
    <string name="validate_password_blank">Password is required</string>
    <string name="validate_password_length">Password must be between 8 and 16 characters</string>
    <string name="validate_password_format">Password must contain 1 uppercase character, 1 alphanumeric character, and 1 special character</string>
    <string name="address">Address</string>
    <string name="placeholder_address">Da Nang</string>
    <string name="genre">Genre</string>
    <string name="placeholder_genre">Female/Male</string>
    <string name="teacher">Teacher</string>
    <string name="instructor">Instructor</string>
    <string name="title_calendar">Calendar\n</string>
    <string name="appointment">Appointment</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="appointment_time">Time: 16:00 – 17:00</string>
    <string name="view_all_appointments">All Appointments</string>
    <string name="no_appointment_founded">No Appointments</string>
    <string name="list_course">List Course</string>
    <string name="you_are">You are:</string>
    <string name="student">Student</string>
    <string name="you_re_not_logged_in_yet">You\'re not logged in yet</string>
    <string name="manage_account">Manage Account</string>
    <string name="setting">Setting</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="tv_instructor">Instructor:</string>
    <string name="tv_schedule">Schedule:</string>
    <string name="tv_description">Description:</string>
    <string name="find_center">Find Center</string>
    <string name="find_course">Find Course</string>
    <string name="find_instructor">Find Instructor</string>
    <string name="find_your_appointment">Find your appointment</string>
    <string name="update_soon">We\'ll update this feature soon</string>
    <string name="register_successful">Register Successful</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="course_detail">Course Detail</string>
    <string name="rate">Rate:</string>
    <string name="location">Location:</string>
    <string name="booking_successful">Booking Successful:</string>
    <string name="session_booking_message">You have booked a session on %1$s from %2$s to %3$s</string>
    <string name="please_wait">Please wait…</string>
    <string name="login_failed">Login failed</string>
    <string name="try_again">Try again</string>
    <string name="welcome_back">Welcome back, %1$s</string>
    <string name="certification">Certification:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="health">Health</string>
    <string name="bmi_chart">BMI Chart</string>
    <string name="month">December</string>
</resources>