<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_container"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileFragment"
    android:focusable="true">

    <!-- Profile -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_color"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardElevation="@dimen/dp_4"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <ImageView
                android:id="@+id/img_back_button"
                android:layout_width="@dimen/dp_34"
                android:layout_height="@dimen/dp_34"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_instructor_profile"
                android:layout_width="@dimen/dp_280"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="#000000"
                android:textSize="@dimen/sp_26"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:padding="@dimen/dp_10"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="@dimen/dp_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instructor_profile"
                app:layout_constraintVertical_bias="0.784">

                <TextView
                    android:id="@+id/tv_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/instructor"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="260dp"
                android:layout_height="173dp"
                android:layout_marginTop="@dimen/dp_4"
                android:src="@drawable/instructor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instructor_profile"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:ellipsize="marquee"
                android:gravity="center"
                android:paddingVertical="@dimen/dp_12"
                android:text="@string/instructor_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_user"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!--    Profile Information-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_profile_container"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_20">

            <!-- Username -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:padding="@dimen/dp_10"
                android:text="@string/update_profile"
                android:textSize="@dimen/sp_13"
                app:layout_constraintBottom_toTopOf="@+id/tv_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.082" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/placeholder_username"
                android:text="@string/instructor_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_person"
                app:layout_constraintBottom_toTopOf="@+id/tv_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                app:layout_constraintVertical_bias="0.0" />

            <!-- Phone -->
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_phone"
                app:layout_constraintVertical_bias="0.07" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/instructor_phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:text="@string/instructor_phone"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_phone_android_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!--Address-->
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_address"
                app:layout_constraintVertical_bias="0.07" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/placeholder_address"
                android:importantForAutofill="no"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:text="@string/instructor_address"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_location_on_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Genre -->
            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_genre"
                app:layout_constraintVertical_bias="0.07" />
            <EditText
                android:id="@+id/et_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/placeholder_genre"
                android:importantForAutofill="no"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:text="@string/female"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_female_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Height -->
            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_height"
                app:layout_constraintVertical_bias="0.07" />
            <EditText
                android:id="@+id/et_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/height_value"
                android:importantForAutofill="no"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:text="@string/height_value"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_accessibility_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Weight -->
            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_weight"
                app:layout_constraintVertical_bias="0.07" />
            <EditText
                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/weight_value"
                android:importantForAutofill="no"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:text="@string/weight_value"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_accessibility_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Email -->
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_email"
                app:layout_constraintVertical_bias="0.07" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/placeholder_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:text="@string/instructor_email"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_mail_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Password -->
            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/sp_12"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/edit_text_background"
                android:hint="@string/placeholder_pwd"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/dp_12"
                android:paddingVertical="@dimen/dp_8"
                android:drawableEnd="@drawable/baseline_lock_24"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Sign In Button -->
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:backgroundTint="@color/blue"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
